<resources>
    <string name="app_name">Newzy Sport</string>
    <string name="sub_app_name">Green Bay Football \"Newzys\" and more</string>

    <!-- Newzy queries. -->
    <string name="green_bay_football_query">\"Green Bay Packers\"</string>
    <string name="milwaukee_baseball_query">\"Milwaukee Brewers\"</string>
    <string name="wisconsin_hockey_query">\"Wisconsin\"AND\"Badgers\"AND\"hockey\"</string>
    <string name="wisconsin_football_query">\"Wisconsin\"AND\"Badgers\"AND\"football\"</string>
    <string name="nz_cricket_query">\"New Zealand\"AND\"cricket\"</string>
    <string name="nz_rugby_query">\"New Zealand\"AND\"rugby\"</string>

    <!-- Drawer destinations. -->
    <string name="green_bay_football">Green Bay Football</string>
    <string name="milwaukee_baseball">Milwaukee Baseball</string>
    <string name="wisconsin_hockey">Wisconsin Hockey</string>
    <string name="wisconsin_football">Wisconsin Football</string>
    <string name="nz_cricket">New Zealand Cricket</string>
    <string name="nz_rugby">New Zealand Rugby</string>
    <string name="custom_newzys">Custom Newzys</string>
    <string name="settings">Settings</string>
    <string name="powered_by_news_api">Powered by News API</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_image">item image</string>
    <string name="loading_newzy">Loading Newzy&#8230;</string>
    <string name="date_separator">T</string>
    <string name="empty_string" />
    <string name="choose_your_newzys">Choose your Newzys!</string>
    <string name="newsapi_org">https://newsapi.org</string>

    <!-- Empty list view notifications. -->
    <string name="no_internet">No internet available.\nPlease check connectivity and try again.</string>
    <string name="no_newzys">No Newzys to display.\nPlease adjust your settings or select another Newzy category.</string>

    <!-- Search request URL. -->
    <string name="default_request_url"><![CDATA[https://newsapi.org/v2/everything?]]></string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_sort_newzys_by_label">Sort Newzys By:</string>
    <string name="settings_sort_newzys_by_key" translatable="false">sortBy</string>
    <string name="settings_sort_newzys_by_default" translatable="false">@string/settings_sort_newzys_by_newest_value</string>

    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_sort_newzys_by_newest_label">Newest</string>
    <string name="settings_sort_newzys_by_newest_value" translatable="false">publishedAt</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_sort_newzys_by_relevancy_label">Relevance</string>
    <string name="settings_sort_newzys_by_relevancy_value" translatable="false">relevancy</string>

    <!-- Strings For Newzys To Retrieve Preference [CHAR LIMIT=30] -->
    <string name="settings_newzys_to_retrieve_label">Newzys To Retrieve:</string>
    <string name="settings_newzys_to_retrieve_key" translatable="false">pageSize</string>
    <string name="settings_newzys_to_retrieve_default" translatable="false">@string/settings_10_newzys_value</string>

    <!-- Label for 10 Newzys option [CHAR LIMIT=20] -->
    <string name="settings_10_newzys_label">10</string>
    <string name="settings_10_newzys_value" translatable="false">10</string>

    <!-- Label for 20 Newzys option [CHAR LIMIT=20] -->
    <string name="settings_20_newzys_label">20</string>
    <string name="settings_20_newzys_value" translatable="false">20</string>

    <!-- Label for 50 Newzys option [CHAR LIMIT=20] -->
    <string name="settings_50_newzys_label">50</string>
    <string name="settings_50_newzys_value" translatable="false">50</string>

    <!-- Label for 100 Newzys option [CHAR LIMIT=20] -->
    <string name="settings_100_newzys_label">100</string>
    <string name="settings_100_newzys_value" translatable="false">100</string>

    <!-- Strings For Newzys From Date Preference [CHAR LIMIT=30] -->
    <string name="settings_newzys_from_date_label">From Date: (optional)</string>
    <string name="settings_newzys_from_date_key" translatable="false">from</string>
    <string name="settings_newzys_from_date_default" translatable="false">@string/empty_string</string>
    <string name="provide_optional_from_date">Provide optional From Date</string>

    <!-- Strings For Newzys To Retrieve Preference [CHAR LIMIT=30] -->
    <string name="settings_newzys_to_date_label">To Date: (optional)</string>
    <string name="settings_newzys_to_date_key" translatable="false">to</string>
    <string name="settings_newzys_to_date_default" translatable="false">@string/empty_string</string>
    <string name="provide_optional_to_date">Provide optional To Date</string>

    <!-- Strings For Newzys Custom Search Preference [CHAR LIMIT=30] -->
    <string name="settings_custom_newzys_label">Custom Newzys (optional)</string>
    <string name="settings_custom_newzys_key" translatable="false">custom</string>
    <string name="settings_custom_newzys_default" translatable="false">@string/empty_string</string>
    <string name="provide_optional_custom_search">Provide optional custom search</string>

    <!-- Strings For API Key Preference [CHAR LIMIT=30] -->
    <string name="settings_api_key_label">News API Key:</string>
    <string name="settings_api_key_key" translatable="false">api-key</string>
    <string name="settings_api_key_default" translatable="false">@string/empty_string</string>
    <string name="provide_api_key">Provide News API Key</string>
</resources>
